0008239: Foundation Classes - directive "using namespace std" doesn't allow to build application with OCC and other 3rd party libraries

Standard_Stream.hxx no more adds "using std::" entities.